tests/negative/test-fail-struct3.rooc
struct Test {
    field1:int,
}

fun main() -> int {
    var test:Test = Test {field2 : 1,};
    return 0;
}